--- a/src/sass/_spinner.scss
+++ b/src/sass/_spinner.scss
@@ -70,13 +70,18 @@ circle {
   position: fixed;
   height: 100%;
   width: 100%;
-  background-color: rgba(0,0,0,0.75);
   top: 0;
   left: 0;
+  background: #eee;
   opacity: 0;
 }
+.--modal-background{
+  //background-color: rgba(0,0,0,0.75);
+  opacity: 0;
+  height: 100%;
+}
 
-.modalfade{
+.fadein{
   opacity: 1;
 }
 
